corehq/apps/reports/static/reports/css/maps.css
/* fix bootstrap / gmaps conflict */
/*
#map img {
  max-width: none !important;
}
*/

.control-pane {
  /* copied from style of other leaflet controls */
  background: rgba(248, 248, 248, .8);
  box-shadow: 0 1px 7px rgba(0,0,0,0.4);
  border-radius: 5px;
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;

  padding: 10px;
}

#sidebar {
  max-width: 12em;
}

.zoomtofit {
  background-image: url(/static/reports/css/leaflet/images/zoomfit.png);
  cursor: pointer;
}

.choice {
  color: black;
  font-weight: normal;
  cursor: pointer;
}

.selected {
  color: #a00;
  font-weight: bold;
  cursor: pointer;
}

.disabled {
  color: #888;
}

.detail_data {
    font-weight: bold;
    text-align: right;
    padding-left: 20px;
}

.detail_active {
    background-color: #cff;
}

.sizelegend .circle-container {
    text-align: center;
    //padding: 5px;
}

.sizelegend .circle {
    display: inline-block;
    border: 1.5px solid black;
    background-color: #ddd;
    border-radius: 50%;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
}

.sizelegend .vallabel {
    padding-left: 0.6em;
}

.enumlegend .enum {
    width: 1.2em;
}

.enumlegend .vallabel {
    padding-left: 0.8em;
}

.colorscalelegend {
    margin-top: 0.8em;
}

.colorscalelegend .width-spacer {
    color: transparent;
    line-height: 0em;
}

.colorscalelegend .tickmarks {
    vertical-align: top;
    padding-left: 0.5em;
}

.colorscalelegend .tickmarks-inner {
    position: relative;
}

.colorscalelegend .ticklabel {
    position: absolute;
    white-space: nowrap;
    line-height: 1em;
}

.colorscalelegend .ticklabel-inner {
    margin-top: -0.5em;
}

.glow {
    background-color: rgba(255, 255, 190, .75);
    -webkit-box-shadow: 0px 0px 10px 10px rgba(255, 255, 190, .75);
    -moz-box-shadow: 0px 0px 10px 10px rgba(255, 255, 190, .75);
    box-shadow: 0px 0px 10px 10px rgba(255, 255, 190, .75);
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    border-radius: 50%;
}

#info {
    text-align: right;
}

.metrics-container {
    margin-left: -1.5em;
}

.metric-group {
    margin-left: 1.5em;
}

